Build and pom updates for Java 17. Untested.